Fix navigation header bar gap when scrolling using menu; Fix responsiveness in hobbies section

--- a/UpdatedPage/assets/css/3-sections/_home-hobbies.sass
+++ b/UpdatedPage/assets/css/3-sections/_home-hobbies.sass
@@ -108,7 +108,7 @@ section.hobbies
             margin-top: 100px
         
         .col-1
-            width: auto
+            width: 75%
 
             .social-links
                 margin-top: 50px
